[package]
name = "argentum_game_world_generator"
version = "0.1.0"
edition = "2021"
description = "Argentum: World Generator"
license = "AGPL-3.0-or-later"

[dependencies]
argentum_game_voxel = { path = "../argentum_game_voxel" }
argentum_game_coordinate_system = { path = "../argentum_game_coordinate_system" }
ndarray = "0.16.1"
quickcheck = { version = "1.0.3", default-features = false }
